--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
               ]
             }' 
           )
+          echo "Please write down a markdown content based on this data\n```$response```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
           printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
