--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,14 @@ jobs:
           echo ${{ github.event.pull_request.head.ref }}
           echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
 
+      - name: Fetch PRs in milestone
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
+          prs_in_milestone=$(echo "$response" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [#\(.number)](\(.html_url))"')
+          echo "PRS_IN_MILESTONE=$prs_in_milestone" >> $GITHUB_ENV
+
       - name: Request ChatGPT to write down CHANGELOG content
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
@@ -39,12 +47,12 @@ jobs:
               "messages": [
                 { 
                   "role": "user",
-                  "content": "Please write down a markdown content based on this data\n```$response```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
+                  "content": "Please write down a markdown content based on this data\n```$PRS_IN_MILESTONE```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
                 }
               ]
             }' 
           )
-          echo "Please write down a markdown content based on this data\n```$response```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
+          echo "Please write down a markdown content based on this data\n```$PRS_IN_MILESTONE```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
           printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
