--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name} | tostring')
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | while read line; do echo "$line" | jq -s '.'; done | jq -s '.')
           echo $prs_in_milestone
-          # echo 'PRS_IN_MILESTONE<<EOF' >> $GITHUB_ENV
+          echo "PRS_IN_MILESTONE=$prs_in_milestone" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG content
         env:
