--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,8 @@ jobs:
               ]
             }' 
           )
-          echo $PRS_IN_MILESTONE
+          echo "hello world ```$PRS_IN_MILESTONE```"
+          echo "hello world2 $PRS_IN_MILESTONE"
           echo "Please write down a markdown content based on this data\n```$PRS_IN_MILESTONE```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
