--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,12 +47,12 @@ jobs:
               "messages": [
                 { 
                   "role": "user",
-                  "content": "Please write down a markdown content based on this data\n```$PRS_IN_MILESTONE```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
+                  "content": "Please write down a markdown content based on this data\n```$PRS_IN_MILESTONE```\nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
                 }
               ]
             }' 
           )
-          echo "Please write down a markdown content based on this data\n $PRS_IN_MILESTONE \nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
+          echo "Please write down a markdown content based on this data\n $PRS_IN_MILESTONE \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
           printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
