--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,17 @@ jobs:
               ]
             }' 
           )
-          echo "Please write down a markdown content based on this data\n $PRS_IN_MILESTONE \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
+
+            echo '{
+              "model": "gpt-3.5-turbo",
+              "messages": [
+                { 
+                  "role": "user",
+                  "content": "Please write down a markdown content based on this data\n $PRS_IN_MILESTONE \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
+                }
+              ]
+            }' 
+
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
           printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
