--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,15 +53,7 @@ jobs:
             }' 
           )
 
-          echo '{
-              "model": "gpt-3.5-turbo",
-              "messages": [
-                { 
-                  "role": "user",
-                  "content": "Please write down a markdown content based on this data\n ${{ env.PRS_IN_MILESTONE }} \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
-                }
-              ]
-          }' 
+          echo $response | jq
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
 
           printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
