--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
           PRS=$(echo $PRS_IN_MILESTONE | tr -d '"')
+          CONTENT=$(echo Please write down a markdown content based on this data\n $PRS_IN_MILESTONE \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n)
           response=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
@@ -54,18 +55,8 @@ jobs:
             }' 
           )
 
-          echo '{
-              "model": "gpt-3.5-turbo",
-              "messages": [
-                { 
-                  "role": "user",
-                  "content": "Please write down a markdown content based on this data\n $PRS \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
-                }
-              ]
-            }' 
+          echo $CONTENT
 
-          echo '"$PRS"'
-          echo "$PRS"
           echo $response | jq
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
 
