--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,19 +38,24 @@ jobs:
       - name: Request ChatGPT to write down CHANGELOG content
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
+          PR_LIST: ${{ env.PRS_IN_MILESTONE }} | tr -d '"'
         run: |
-          PRS=$(echo $PRS_IN_MILESTONE | tr -d '"')
-          CONTENT=$(echo "Please write down a markdown content based on this data\n $PRS \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n")
-  
-
-
+          echo "PR_LIST=$PRS_IN_MILESTONE | tr -d '"'" >> $GITHUB_ENV 
           response=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
-           -d '' 
+           -d '{
+              "model": "gpt-3.5-turbo",
+              "messages": [
+                { 
+                  "role": "user",
+                  "content": "Please write down a markdown content based on this data\n ${{ env.PRS }} \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
+                }
+              ]
+            }' 
           )
 
-          echo '"${{ env.PRS_IN_MILESTONE }}"'
+          echo '"${{ env.PR_LIST }}"'
 
           echo $response | jq
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
