--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,13 +49,11 @@ jobs:
               "messages": [
                 { 
                   "role": "user",
-                  "content": "Please write down a markdown content based on this data\n ${{ env.PRS }} \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
+                  "content": "Please write down a markdown content based on this data\n ${{ env.PR_LIST }} \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n"
                 }
               ]
             }' 
           )
-
-          echo '"${{ env.PR_LIST }}"'
 
           echo $response | jq
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
