--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
               "messages": [
                 { 
                   "role": "user",
-                  "content": ${{ env.GPT_CONTENT }}
+                  "content": "hey"
                 }
               ]
             }' 
