--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
           echo "PR_LIST=$PRS_IN_MILESTONE | tr -d '\"'" >> $GITHUB_ENV
           echo "GPT_CONTENT=Please write down a markdown content based on this data\n ${{ env.PR_LIST }} \nin the format like this\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n" >> $GITHUB_ENV
 
+          echo ${{ env.GPT_CONTENT }}
 
       - name: Commit and push changes
         env:
