--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,27 @@ jobs:
       - name: Request ChatGPT to write down CHANGELOG
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
-        run:
-          echo '"${{ env.CHAT_GPT_CONTENT }}"'
+        run: |
+          response=$(curl -X POST https://api.openai.com/v1/chat/completions \
+           -H "Content-Type: application/json" \
+           -H "Authorization: Bearer $OPENAI_KEY" \
+           -d '{
+              "model": "gpt-3.5-turbo",
+              "messages": [
+                { 
+                  "role": "user",
+                  "content": ${{ env.CHAT_GPT_CONTENT }}
+                }
+              ]
+            }' 
+          )
+
+          echo $response | jq
+          changelog_content=$(echo $response | jq -r '.choices[].message.content')
+
+          printf '\n%s' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          echo -e "$changelog_content" >> changelog_tmp.md
+
+          awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
+          mv temp CHANGELOG.md
+          rm changelog_tmp.md
