--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,3 +62,13 @@ jobs:
           awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
           mv temp CHANGELOG.md
           rm changelog_tmp.md
+
+      - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add CHANGELOG.md
+          git commit -m "Update CHANGELOG.md with PRs in milestone $MILESTONE_TITLE"
+          git push
