--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           echo $response | jq
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
 
-          printf '\n%s\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
           echo -e "$changelog_content" >> changelog_tmp.md
 
           awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
