--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
            -H "Authorization: Bearer $OPENAI_KEY" \
            -d '{
               "model": "gpt-3.5-turbo",
+              "temperature": 0.5,
               "messages": [
                 { 
-                  "role": "user",
                   "content": "${{ env.CHAT_GPT_CONTENT }}"
                 }
               ]
