--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,8 @@ jobs:
               "model": "gpt-3.5-turbo",
               "temperature": 0.5,
               "messages": [
-                { 
+                {
+                  "role": "user",
                   "content": "${{ env.CHAT_GPT_CONTENT }}"
                 }
               ]
