--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           echo "CHAT_GPT_CONTENT=$(echo Please write down a markdown content based on this data\\n $prs_in_milestone \\nin the following format, but with the title name of common coming first, followed by the alphabetically sorted packages and then the pull requests with higher numbers appearing first\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### other package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n)" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG
-        if: ${{ success() }}
+        if: success()
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
