--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
 
       - name: Fetch PRs in milestone
+        id: fetch-prs-in-milestone
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -40,7 +41,7 @@ jobs:
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
-          echo ${{ success() }}
+          echo ${{ fetch-prs-in-milestone.result }}
           response=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
