--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,30 +21,27 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq
 
-      - name: Extract milestone title from branch name
+      - name: Extract current version from branch name
         run: |
-          milestone_title=$(echo "${{ github.event.pull_request.head.ref }}" | sed -E 's/^release\/(.*)/\1/')
+          CURRENT_VERSION=$(echo "${{ github.event.pull_request.head.ref }}" | sed -E 's/^release\/(.*)/\1/')
           echo ${{ github.event.pull_request.head.ref }}
-          echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
+          echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
 
       - name: Fetch PRs in milestone
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring | sed 's/^"//;s/"$//')
-          if [[ ${#prs_in_milestone[@]} -eq 0 ]]; then
-            echo "GITHUB API 오류입니다. 다시 시도해 주세요."
-            exit 1
-          fi
+          RESPONSE=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
+          PRS_IN_MILESTONE=$(echo "$RESPONSE" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring | sed 's/^"//;s/"$//')
+          echo PRS_IN_MILESTONE
 
-          echo "CHAT_GPT_CONTENT=$(echo Please write down a markdown content based on this data\\n $prs_in_milestone \\nin the following format, but with the title name of common coming first, followed by the alphabetically sorted packages and then the pull requests with higher numbers appearing first\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### other package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n)" >> $GITHUB_ENV
+          echo "CHAT_GPT_CONTENT=$(echo Please write down a markdown content based on this data\\n $PRS_IN_MILESTONE \\nin the following format, but with the title name of common coming first, followed by the alphabetically sorted packages. and then the pull requests with higher numbers appearing first\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### other package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n)" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
-          response=$(curl -X POST https://api.openai.com/v1/chat/completions \
+          RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
            -d '{
@@ -59,10 +56,10 @@ jobs:
             }' 
           )
 
-          echo $response | jq
-          changelog_content=$(echo $response | jq -r '.choices[].message.content')
+          echo $RESPONSE | jq
+          changelog_content=$(echo $RESPONSE | jq -r '.choices[].message.content')
 
-          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          printf '\n%s\n\n' "## ${{ env.CURRENT_VERSION }}" >> changelog_tmp.md
           echo -e "$changelog_content" >> changelog_tmp.md
 
           awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
@@ -76,5 +73,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git add CHANGELOG.md
-          git commit -m "Update CHANGELOG.md with PRs in milestone $MILESTONE_TITLE"
+          git commit -m "Update ${{ env.CURRENT_VERSION }} CHANGELOG"
           git push
