--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq
 
-      - name: Get the current version
-        run: |
-          CURRENT_VERSION=${{ github.event.pull_request.milestone.title }}
-          echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
-
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
-          echo "${{ env.CURRENT_VERSION }}"
-          RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
+          RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ github.event.pull_request.milestone.title }}+type:pr+repo:$GITHUB_REPOSITORY")
           
           if [[ $(echo "$RESPONSE" | jq '.total_count') == null ]]; then
             echo $RESPONSE | jq '.message'
@@ -65,7 +59,7 @@ jobs:
           echo $RESPONSE | jq
           changelog_content=$(echo $RESPONSE | jq -r '.choices[].message.content')
 
-          printf '\n%s\n\n' "## ${{ env.CURRENT_VERSION }}" >> changelog_tmp.md
+          printf '\n%s\n\n' "## ${{ github.event.pull_request.milestone.title }}" >> changelog_tmp.md
           echo -e "$changelog_content" >> changelog_tmp.md
 
           awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
@@ -79,5 +73,5 @@ jobs:
           git config --local user.email "${{ env.COMMIT_USER_EMAIL }}"
           git config --local user.name "${{ env.COMMIT_USER_NAME }}"
           git add CHANGELOG.md
-          git commit -m "Update ${{ env.CURRENT_VERSION }} CHANGELOG"
+          git commit -m "Update ${{ github.event.pull_request.milestone.title }} CHANGELOG"
           git push
